fixing mobile styles overflow

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1146,7 +1146,7 @@ form {
 }
 .gtco-nav-toggle {
   position: fixed;
-  right: 0px;
+  right: 10px;
   top: 10px;
   // top: 100px;
   // left: -100px;;
@@ -1163,6 +1163,12 @@ form {
   @media screen and (max-width: $screen-sm) {
   	display: block;
   }
+}
+
+.row {
+	@media screen and (max-width: $screen-sm) {
+		margin: 0;
+	}
 }
 
 // Buttons
